<resources>
    <string name="app_name">JDJ</string>

    <string name="settings_file">com.hmsphr.jdj.SETTINGS_FILE</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_player">PlayerActivity</string>

    <string name="player_img">Player Image</string>
    <string name="player_web">Player Web</string>
    <string name="player_video">Player Video</string>

    <string name="enable_background_audio">Play in background</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="text">Text</string>
    <string name="logging">Logging</string>
    <string name="logging_normal">Normal</string>
    <string name="logging_verbose">Verbose</string>
    <string name="retry">Retry</string>
    <string name="off">[off]</string>
    <string name="on">[on]</string>
    <string name="failed">Playback failed</string>

    <string name="welcome_connecting">Connexion au serveur de Spectacle en cours..</string>
    <string name="welcome_nonetwork">Aucune connexion au réseau..\nVérifiez que vous êtes connecté à internet via Wifi ou 3G/4G !</string>
    <string name="welcome_noserver">Impossible de joindre le serveur..\nVous serez alerté lorsque la communication sera rétablie.</string>
    <string name="welcome_nouser">Vous devez vous inscrire à un spectacle..</string>
    <string name="welcome_showpast">Le spectacle est terminé..\nMerci de nous avoir suivi !</string>
    <string name="welcome_showfuture">Le spectacle commencera bientôt !\nVous serez alerté en direct des évènements à venir..</string>
    <string name="welcome_showtime">Le spectacle est en cours, restez connecté ! </string>


    <string name="expired_title">Version expirée :\'(</string>
    <string name="expired_text1">Vous utilisez une version de l\'application qui n\'est plus compatible avec le spectacle.</string>
    <string name="expired_text2">Merci de mettre à jour votre application via Google Play ou en la réinstallant manuellement.</string>
    <string name="expired_bye">A bientôt !</string>

    <string name="updatable_title">Mise à jour disponible</string>
    <string name="updatable_text">Nous vous recommandons d\'appliquer cette mise à jour depuis Google Play pour profiter pleinement de l\'application.\n\nBon Spectacle !</string>

    <string name="register_title">Inscription</string>
    <string name="register_text1">Représentation:</string>
    <string name="register_text2">Numéro de portable:</string>
    <string name="register_text3">Votre numéro ne sera transmis à aucun tiers, et servira uniquement à vous tenir au courant des évènements concernant la représentation choisie.</string>
    <string name="register_bye">Bon spectacle !</string>

    <string name="info_title">Information</string>
    <string name="info_text">
        - JOURNAL d’un SEUL JOUR invite le spectateur à une aventure de 24 heures en plusieurs épisodes, de midi à midi. Chacun peut suivre l’ensemble des pièces, quelques-unes ou une seule. Chaque épisode, de 5 à 40 minutes, est un maillon de l’histoire tout en étant un récit en soi.\n\n
        - Des épisodes sont annoncés dans une programmation, d’autres convoquent le public à des rendez-vous secrets par message téléphonique, via les réseaux sociaux, un journal… D’autres enfin sont des infiltrations clandestines dans la ville, sans préavis.\n\n
        - Les séquences se déroulent dans des lieux choisis de la ville, emblèmes de ses urbanités multiples.
    </string>

    <string name="audio_shutter">audio shutter</string>
    <string name="replay_shutter">replay shutter</string>
    <string name="replay">replay</string>
    <string name="jdjLogo">JDJ Logo</string>

</resources>
