<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.hmsphr.jdj.Activities.WelcomeActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentStart="false"
        android:layout_above="@+id/updateBar"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:src="@drawable/jdj_logob"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="20dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Réglages"
                android:id="@+id/menuSettings"
                style="@style/ButtonJDJ" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Info"
                android:id="@+id/menuInfo"
                style="@style/ButtonJDJ" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quitter"
                android:id="@+id/menuExit"
                style="@style/ButtonJDJ" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/welcomeText"
                android:textColor="#ffffff"
                android:editable="false"
                android:inputType="none"
                android:background="#000000"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_weight="20"
                android:layout_gravity="center"
                android:text="Bienvenue dans le Journal d&apos;un seul Jour !"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/versionFrame"
        android:layout_margin="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true">

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#fd570e"
        android:id="@+id/updateBar"
        android:visibility="visible"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Une mise à jour est disponible"
            android:id="@+id/updateBarText"
            android:layout_gravity="center"
            android:background="#00ffffff"
            android:padding="2dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:id="@+id/updateBox"
        android:visibility="gone" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.6"
            android:background="@android:color/black"
            android:id="@+id/updateOverlay" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialogbox"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:weightSum="1"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="70dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/updatable_title"
                android:id="@+id/updateTitle"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/updatable_text"
                android:id="@+id/updateText"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mettre à Jour"
                    android:id="@+id/updateGO"
                    android:layout_gravity="right" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ignorer"
                    android:id="@+id/updateCANCEL"
                    android:layout_gravity="right" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:id="@+id/registerBox"
        android:visibility="gone" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.6"
            android:background="@android:color/black"
            android:id="@+id/registerOverlay" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialogbox"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:weightSum="1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView2"
                    android:src="@drawable/ic_notifsmall" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/registerTitle"
                    android:text="@string/register_title"
                    android:textSize="30dp"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ffffff"
                android:layout_weight="0.23"
                android:layout_marginBottom="10dp"></FrameLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/register_text1"
                    android:id="@+id/registerText1"
                    android:phoneNumber="false"
                    android:layout_marginRight="20dp" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/registerShow"
                    android:background="#222222" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginBottom="10dp"
                android:padding="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/register_text2"
                    android:id="@+id/registerText2"
                    android:phoneNumber="false"
                    android:layout_marginRight="20dp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/registerPhone"
                    android:textColor="#DDDDDD"
                    android:layout_weight="0.25"
                    android:background="#222222"
                    android:textSize="18dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:text="0675471820" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/register_text3"
                android:id="@+id/registerText3" />

            <Button
                android:layout_width="112dp"
                android:layout_height="27dp"
                android:text="Enregistrer"
                android:id="@+id/registerOK"
                android:background="@android:color/black"
                android:textColor="#DDDDDD"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:layout_marginTop="20dp" />

        </LinearLayout>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="0.4.2"
        android:id="@+id/versionText"
        android:textColor="#dcdcdc"
        android:textSize="13dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:background="#00ffffff"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp" />

</RelativeLayout>
